feat: change from template

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "gh-acoitns-move-all-cards-on-projects",
+  "version": "0.0.1",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Move all cards to specific column from specific column.",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/HiromiShikata/gh-actions-move-all-cards-on-projects.git"
   },
   "keywords": [
     "actions",
-    "node",
-    "setup"
+    "projects",
+    "node"
   ],
-  "author": "",
+  "author": "shikata.hiromi@gmail.com",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6"
