--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,8 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'WIP/Move all cards on projects'
+description: 'To specific column from specific column'
+author: 'HiromiShikata'
 inputs:
-  milliseconds: # change this
+  milliseconds:
     required: true
     description: 'input description here'
     default: 'default value if applicable'
