feat: add OctokitGithubRepository

--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   "author": "shikata.hiromi@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.4.0"
+    "@actions/core": "^1.4.0",
+    "@actions/github": "^5.0.0",
+    "@octokit/graphql": "^4.6.4",
+    "@supercharge/promise-pool": "^1.7.0",
+    "octokit": "^1.1.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
