--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,18 @@ name: 'WIP/Move all cards on projects'
 description: 'To specific column from specific column'
 author: 'HiromiShikata'
 inputs:
-  milliseconds:
+  project_name:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'Project name'
+  from_column_name:
+    required: true
+    description: 'From column name'
+  to_column_name:
+    required: true
+    description: 'To column name'
+  github_token:
+    required: true
+    description: 'GitHub Token'
 runs:
   using: 'node12'
   main: 'dist/index.js'
