chore: removed WIP from title

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'WIP/Move all cards on projects'
+name: 'Move all cards on projects'
 description: 'To specific column from specific column'
 author: 'HiromiShikata'
 inputs:
